--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,48 +2,41 @@
   title={Toward approaches to scalability in 3d human pose estimation},
   author={Kim, Jun-Hui and Lee, Seong-Whan},
   journal={Advances in Neural Information Processing Systems},
-  volume={37},
-  pages={105476--105502},
-  year={2024}
+  year={2024},
+selected={true}
+
 }
 
 @article{yang2024geometry,
   title={Geometry-driven self-supervision for 3D human pose estimation},
   author={Yang, Geon-Jun and Kim, Jun-Hee and Lee, Seong-Whan},
   journal={Neural Networks},
-  volume={174},
-  pages={106237},
   year={2024},
-  publisher={Elsevier}
+selected={true}
 }
 
 @article{yang2023egpose,
   title={Egpose: Explicit and geometric self-supervision for 3d human pose estimation},
   author={Yang, Geon-Jun and Kim, Jun-Hee and Kim, Hyun-Woo and Lee, Gun-Hee and Lee, Seong-Whan},
   journal={Procedia Computer Science},
-  volume={222},
-  pages={387--396},
   year={2023},
-  publisher={Elsevier}
+selected={true}
 }
 
 @inproceedings{han2025propose,
   title={ProPose: Probabilistic 3D Human Pose Estimation with Instance-Level Distribution and Normalizing Flow},
   author={Han, Jumin and Kim, Jun-Hee and Lee, Seong-Whan},
   booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume={39},
-  number={3},
-  pages={3338--3346},
-  year={2025}
+  year={2025},
+selected={true}
 }
 
 @InProceedings{Kim_2025_ICCV,
     author    = {Kim, Jun-Hee and Han, Jumin and Lee, Seong-Whan},
     title     = {PoseAnchor: Robust Root Position Estimation for 3D Human Pose Estimation},
     booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
-    month     = {October},
     year      = {2025},
-    pages     = {7079-7088}
+selected={true}
 }
 
 @inproceedings{
@@ -52,5 +45,5 @@ title={Towards Generalizable 3D Human Pose Estimation via Ensembles on Flat Loss
 author={Jumin Han and Jun-Hee Kim and Seong-Whan Lee},
 booktitle={The Thirty-ninth Annual Conference on Neural Information Processing Systems},
 year={2025},
-url={https://openreview.net/forum?id=nZ4mFzCZIx}
+selected={true}
 }
