--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 @article{kim2024toward,
   title={Toward approaches to scalability in 3d human pose estimation},
-  author={Kim, Jun-Hui and Lee, Seong-Whan},
+  author={Kim, Jun-Hee and Lee, Seong-Whan},
   journal={Advances in Neural Information Processing Systems},
   year={2024},
 selected={true}
